--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.17.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
+    "file-type": "^19.4.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.7",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8"
@@ -41,6 +45,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/qrcode": "^1.5.5",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
