--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/puppeteer": "^5.4.7",
     "@types/qrcode": "^1.5.5",
     "@types/supertest": "^6.0.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "cookie-parser": "^1.4.6",
@@ -64,7 +65,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "uuid": "^10.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
