--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -33,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.7",
+    "nodemailer": "^6.9.15",
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -46,6 +48,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.16.2",
+    "@types/nodemailer": "^6.4.16",
     "@types/puppeteer": "^5.4.7",
     "@types/qrcode": "^1.5.5",
     "@types/supertest": "^6.0.0",
