--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.7",
     "nodemailer": "^6.9.15",
+    "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -46,6 +47,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
+    "@types/file-type": "^10.6.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.16.2",
     "@types/nodemailer": "^6.4.16",
