--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -26,15 +26,16 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@prisma/client": "^5.17.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.7",
-    "nodemailer": "^6.9.15",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.0",
@@ -48,9 +49,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/file-type": "^10.6.0",
+    "@types/handlebars": "^4.0.40",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.16.2",
-    "@types/nodemailer": "^6.4.16",
     "@types/puppeteer": "^5.4.7",
     "@types/qrcode": "^1.5.5",
     "@types/supertest": "^6.0.0",
