--- a/.github/workflows/deploy-backend-dev.yaml
+++ b/.github/workflows/deploy-backend-dev.yaml
@@ -3,7 +3,7 @@ name: Deploy to Cloud Run
 on:
   push:
     branches:
-      - dev
+      - backup/dev-2025-06-15
 
 jobs:
   deploy:
@@ -42,4 +42,4 @@ jobs:
             --platform managed \
             --region asia-southeast1 \
             --allow-unauthenticated \
-            --set-env-vars "NODE_ENV=production,PROTOCOL=https,HOST=0.0.0.0,FRONTEND_URL=https://dev.gmf-aeroasia.publicvm.com,BACKEND_URL=https://dev-api.gmf-aeroasia.publicvm.com,DATABASE_URL=${{ secrets.DATABASE_URL_DEV }},QR_CODE_LINK=https://dev.gmf-aeroasia.publicvm.com/participants/{id}/detail,ACCESS_TOKEN=${{ secrets.ACCESS_TOKEN_DEV }},REFRESH_TOKEN=${{ secrets.REFRESH_TOKEN_DEV }},VERIFICATION_TOKEN=${{ secrets.VERIFICATION_TOKEN_DEV }},MAIL_HOST=smtp.gmail.com,MAIL_PORT=587,MAIL_USER=${{ secrets.MAIL_USER_DEV }},MAIL_PASS=${{ secrets.MAIL_PASS_DEV }},APP_NAME=Admin GMF Training"
+            --set-env-vars "NODE_ENV=production,PROTOCOL=https,HOST=0.0.0.0,FRONTEND_URL=https://gmf-utility-training.github.io/tu-frontend/,BACKEND_URL=https://dev-api.gmf-aeroasia.publicvm.com,DATABASE_URL=${{ secrets.DATABASE_URL_DEV }},QR_CODE_LINK=https://gmf-utility-training.github.io/tu-frontend/participants/{id}/detail,ACCESS_TOKEN=${{ secrets.ACCESS_TOKEN_DEV }},REFRESH_TOKEN=${{ secrets.REFRESH_TOKEN_DEV }},VERIFICATION_TOKEN=${{ secrets.VERIFICATION_TOKEN_DEV }},MAIL_HOST=smtp.gmail.com,MAIL_PORT=587,MAIL_USER=${{ secrets.MAIL_USER_DEV }},MAIL_PASS=${{ secrets.MAIL_PASS_DEV }},APP_NAME=Admin GMF Training"
